fixed overflow & scroll bug when snippet list was higher than sidebar.

--- a/app/styles/upfront/upfront-sidebar.less
+++ b/app/styles/upfront/upfront-sidebar.less
@@ -110,6 +110,14 @@
 
 
 // Snippet List
+.upfront-snippet-wrapper {
+  position: absolute;
+  top: 69px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: auto;
+}
 
 .upfront-snippet-list {
   padding: 4px 0;
